--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,18 +29,6 @@ if ( NOT GDAL_FOUND )
 endif()
 
 
-# OpenMP and its components
-find_package( OpenMP )
-
-if ( NOT OpenMP_CXX_FOUND )
-
-  message(STATUS "This project requires the OpenMP library, and will not be compiled.")
-
-  return()  
-
-endif()
-
-
 # include for local directory
 
 # include for local package
@@ -54,4 +42,4 @@ add_executable( compute-LOD2  main.cpp )
 add_to_cached_list( CGAL_EXECUTABLE_TARGETS compute-LOD2 )
 
 # Link the executable to CGAL and third-party libraries
-target_link_libraries(compute-LOD2 PRIVATE CGAL::CGAL GDAL::GDAL OpenMP::OpenMP_CXX)
+target_link_libraries(compute-LOD2 PRIVATE CGAL::CGAL GDAL::GDAL)
