Put edge_collaspe in a single file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,7 +50,7 @@ endif()
 # Creating entries for target: compute-LOD2
 # ############################
 
-add_executable( compute-LOD2  main.cpp raster.cpp code.cpp)
+add_executable( compute-LOD2  main.cpp raster.cpp edge_collapse.cpp code.cpp)
 
 add_to_cached_list( CGAL_EXECUTABLE_TARGETS compute-LOD2 )
 
