Try implement LindstormTurk with pseudo inverse

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,18 @@ if ( NOT Ceres_FOUND )
 endif()
 
 
+# Eigen3 and its components
+find_package(Eigen3 3.4.0 REQUIRED)
+
+if ( NOT Eigen3_FOUND )
+
+  message(STATUS "This project requires the Eigen3 library, and will not be compiled.")
+
+  return()  
+
+endif()
+
+
 # include for local directory
 
 # include for local package
@@ -50,9 +62,9 @@ endif()
 # Creating entries for target: compute-LOD2
 # ############################
 
-add_executable( compute-LOD2  main.cpp raster.cpp code.cpp edge_collapse.cpp path.cpp bridge.cpp)
+add_executable( compute-LOD2  main.cpp raster.cpp code.cpp edge_collapse2.cpp path.cpp bridge.cpp)
 
 add_to_cached_list( CGAL_EXECUTABLE_TARGETS compute-LOD2 )
 
 # Link the executable to CGAL and third-party libraries
-target_link_libraries(compute-LOD2 PRIVATE CGAL::CGAL GDAL::GDAL Ceres::ceres)
+target_link_libraries(compute-LOD2 PRIVATE CGAL::CGAL GDAL::GDAL Ceres::ceres Eigen3::Eigen)
