Main for edge_collapse.cpp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,3 +68,13 @@ add_to_cached_list( CGAL_EXECUTABLE_TARGETS compute-LOD2 )
 
 # Link the executable to CGAL and third-party libraries
 target_link_libraries(compute-LOD2 PRIVATE CGAL::CGAL GDAL::GDAL Ceres::ceres Eigen3::Eigen)
+
+# Creating entries for target: do-edge-collapse
+# ############################
+
+add_executable( do-edge-collapse  main_edge_collapse.cpp raster.cpp edge_collapse.cpp)
+
+add_to_cached_list( CGAL_EXECUTABLE_TARGETS do-edge-collapse )
+
+# Link the executable to CGAL and third-party libraries
+target_link_libraries(do-edge-collapse PRIVATE CGAL::CGAL GDAL::GDAL Eigen3::Eigen)
